chain/indexer/src/handlers/snapshots/blokli_chain_indexer__handlers__service_registry__tests__deregistered_event.snap
---
source: chain/indexer/src/handlers/service_registry.rs
expression: entry_update(events)
---
kind: Deregistered
service_type: "gvpn:exit"
node: "0x1111111111111111111111111111111111111111"
entry: ~
