chain/indexer/src/handlers/snapshots/blokli_chain_indexer__handlers__service_registry__tests__registration_fee_changed_event.snap
---
source: chain/indexer/src/handlers/service_registry.rs
expression: type_update(events)
---
kind: RegistrationFeeChanged
service_type: ~
config: ~
registry_config:
  type_registration_fee: 10 wxHOPR
  node_safe_registry: "0x0000000000000000000000000000000000000000"
