chain/indexer/src/handlers/snapshots/blokli_chain_indexer__handlers__service_registry__tests__requirement_changed_event.snap
---
source: chain/indexer/src/handlers/service_registry.rs
expression: type_update(events)
---
kind: RequirementChanged
service_type: "gvpn:exit"
config:
  service_type: "gvpn:exit"
  owner: "0x3333333333333333333333333333333333333333"
  requirement: "0x5555555555555555555555555555555555555555"
  registration_burn: 0 wxHOPR
  update_burn: 0 wxHOPR
registry_config: ~
